--- a/app/assets/stylesheets/skills.scss
+++ b/app/assets/stylesheets/skills.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .skills-transition-enter {
   max-height: 0;
 
@@ -10,5 +12,48 @@
 .skills-list {
   li {
     overflow: hidden;
+  }
+}
+
+.user-skill-list {
+  padding: 0 30px;
+  list-style-type: none;
+}
+
+.user-skill-item {
+  display: flex;
+  flex-direction: column;
+
+  &.expanded {
+    .skill-stub-body {
+      transition: 500ms ease-in-out;
+      max-height: 400px;
+      overflow: scroll;
+    }
+  }
+
+  .skill-stub-body {
+    max-height: 0;
+    overflow: hidden;
+  }
+}
+
+.skill-stat {
+  display: flex;
+  align-items: center;
+}
+
+.user-skill-header {
+  display: flex;
+  cursor: pointer;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $color5;
+  color: #fff;
+  padding: 15px;
+
+  a {
+    color: inherit;
+    text-decoration: none;
   }
 }
