--- a/app/assets/stylesheets/top_bar.scss
+++ b/app/assets/stylesheets/top_bar.scss
@@ -2,6 +2,11 @@
 
 .top-bar {
   display: flex;
+  flex-direction: column;
+}
+
+#header-info {
+  display: flex;
   padding: 10px 20px;
   justify-content: space-between;
   align-items: center;
@@ -17,5 +22,22 @@
     color: inherit;
     text-decoration: none;
     font-size: 1.2rem;
+  }
+}
+
+#navbar {
+  display: flex;
+}
+
+.navbar-link {
+  padding: 10px;
+  color: #333;
+  background-color: $color1;
+  flex-grow: 1;
+  text-decoration: none;
+  text-align: center;
+
+  &.active {
+    background-color: $color3;
   }
 }
